<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llTitleWeekContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        style="@style/WeekDayTitleStyle"
        android:tag="dayOfWeek1"
        android:text="@string/sat" />

    <TextView
        style="@style/WeekDayTitleStyle"
        android:tag="dayOfWeek2"
        android:text="@string/sun" />

    <TextView
        style="@style/WeekDayTitleStyle"
        android:tag="dayOfWeek3"
        android:text="@string/mon" />

    <TextView
        style="@style/WeekDayTitleStyle"
        android:tag="dayOfWeek4"
        android:text="@string/tue" />

    <TextView
        style="@style/WeekDayTitleStyle"
        android:tag="dayOfWeek5"
        android:text="@string/wed" />

    <TextView
        style="@style/WeekDayTitleStyle"
        android:tag="dayOfWeek6"
        android:text="@string/thu" />

    <TextView
        style="@style/WeekDayTitleStyle"
        android:tag="dayOfWeek7"
        android:text="@string/fri" />

</LinearLayout>