<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:background="#fafafa"
    android:layoutDirection="ltr"
    android:theme="@style/NoBackgroundColor">

    <RelativeLayout
        android:id="@+id/rlTimePickerContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center_vertical"
        android:layoutDirection="ltr"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvHeaderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/title_time_picker"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#002f6c"/>

        <TextView
            android:id="@+id/tvHeaderCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:padding="8dp"
            android:text="@string/cancel"
            android:textSize="16sp"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvHeaderDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:padding="8dp"
            android:text="@string/done"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#000000"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rlTimePickerContainer"
        android:gravity="center">

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/Picker"
            android:timePickerMode="spinner">

        </TimePicker>

    </RelativeLayout>

</RelativeLayout><!--    android:numbersTextColor="@color/calendar_text" -->
