<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:orientation="horizontal">

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_guid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layoutDirection="ltr"
                android:orientation="vertical"
                android:padding="5dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/please_choose_time_range"
                    android:textColor="@color/header_color" />

                <TextView
                    android:id="@+id/txt_one_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:text="@string/to_choose_a_date_double_tap_on_same_date" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/lay_Accept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_Accept"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/withdraw"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:cornerRadius="12dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.cardview.widget.CardView>



